--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "swagger-autogen": "^2.23.7"
     },
     "devDependencies": {
+        "husky": "^9.1.7",
         "prettier": "3.5.3"
     }
 }
